nojono vymysleni nazvu commitu

--- a/conf.ini
+++ b/conf.ini
@@ -1,8 +1,13 @@
 [dataset]
-x_train = Datasets/MNIST_digits/x_train.csv
-y_train = Datasets/MNIST_digits/y_train.csv
-x_test = Datasets/MNIST_digits/x_test.csv
-y_test = Datasets/MNIST_digits/y_test.csv
+x = Y:/PythonProjekty/Datasets/MNIST_digits/x.csv
+y = Y:/PythonProjekty/Datasets/MNIST_digits/y.csv
+
+train_part = 0.6
+validation_part = 0.2
+test_part = 0.2
+
+y_do_one_hot = True
+x_do_scaling = True
 
 [hyperpars]
 number_of_hidden_layers = 2
