layer range added

--- a/conf.ini
+++ b/conf.ini
@@ -10,9 +10,10 @@ y_do_one_hot = True
 x_do_scaling = True
 
 [hyperpars]
-number_of_hidden_layers = 2
-number_of_neurons = 16, 32, 64
-activation_funcs = sigmoid, relu
+layer_range = True
+number_of_hidden_layers = 3
+number_of_neurons = 16,
+activation_funcs = relu
 
 [metrics]
 accuracy = True
