confusion matrix added

--- a/conf.ini
+++ b/conf.ini
@@ -12,10 +12,11 @@ x_do_scaling = True
 [hyperpars]
 layer_range = True
 number_of_hidden_layers = 3
-number_of_neurons = 16,
+number_of_neurons = 16, 32, 64
 activation_funcs = relu
 
 [metrics]
+print_confusion_matrix = True
 accuracy = True
 precision = False
 recall = False
