--- a/conf.ini
+++ b/conf.ini
@@ -17,6 +17,7 @@ activation_funcs = relu
 
 [metrics]
 print_confusion_matrix = True
+print_classification_report = True
 accuracy = True
 precision = False
 recall = False
