ja ani nevim co jsem udelal
ale trvalo to celkem dlouho

--- a/conf.ini
+++ b/conf.ini
@@ -10,14 +10,17 @@ y_do_one_hot = True
 x_do_scaling = True
 
 [hyperpars]
-layer_range = True
+layer_range = False
 number_of_hidden_layers = 3
-number_of_neurons = 16, 32, 64
+number_of_neurons = 16
 activation_funcs = relu
 
-[metrics]
+[visualize_results]
 print_confusion_matrix = True
 print_classification_report = True
+
+[sort_by]
 accuracy = True
 precision = False
 recall = False
+f1 = False
