sorting podle metrik

--- a/conf.ini
+++ b/conf.ini
@@ -11,9 +11,9 @@ x_do_scaling = True
 
 [hyperpars]
 layer_range = False
-number_of_hidden_layers = 3
-number_of_neurons = 16
-activation_funcs = relu
+number_of_hidden_layers = 2
+number_of_neurons = 16, 32
+activation_funcs = relu, sigmoid
 
 [visualize_results]
 print_confusion_matrix = True
