--- a/conf.ini
+++ b/conf.ini
@@ -1,3 +1,11 @@
+[learning_settings]
+loss_function = categorical_crossentropy
+epochs = 10
+output_neurons = 10
+output_activation = softmax
+optimizer = adam
+multithreading = True
+
 [dataset]
 x = Y:/PythonProjekty/Datasets/MNIST_digits/x.csv
 y = Y:/PythonProjekty/Datasets/MNIST_digits/y.csv
@@ -20,7 +28,7 @@ print_confusion_matrix = True
 print_classification_report = True
 
 [sort_by]
-accuracy = True
+accuracy = False
 precision = False
 recall = False
 f1 = False
