--- a/conf.ini
+++ b/conf.ini
@@ -24,11 +24,17 @@ number_of_neurons = 16, 32
 activation_funcs = relu, sigmoid
 
 [visualize_results]
-print_confusion_matrix = True
-print_classification_report = True
+print_top = 10
+generate_confusion_matrix = True
+generate_classification_report = True
 
 [sort_by]
-accuracy = False
+accuracy = True
 precision = False
 recall = False
 f1 = False
+
+[save_models]
+save = True
+path = Y:\PythonProjekty\Modely
+save_top = 5
