--- a/cnn_config.ini
+++ b/cnn_config.ini
@@ -1,11 +1,11 @@
 [learning_settings]
 loss_function = categorical_crossentropy
-epochs = 10
+epochs = 15
 output_neurons = 10
 batch_size = 128
 output_activation = softmax
 optimizer = adam
-multithreading = True
+multithreading = False
 
 [dataset]
 x = Y:/PythonProjekty/Datasets/MNIST_digits/x.csv
@@ -23,6 +23,7 @@ layer_range = False
 number_of_hidden_layers = 2
 number_of_neurons = 16, 32
 activation_funcs = relu, sigmoid
+
 
 [visualize_results]
 print_top = 10
