--- a/cnn_conf.ini
+++ b/cnn_conf.ini
@@ -1,15 +1,18 @@
 [learning_settings]
 loss_function = categorical_crossentropy
-epochs = 15
+epochs = 4
 output_neurons = 10
 batch_size = 128
 output_activation = softmax
 optimizer = adam
 multithreading = False
+input_shape = (32,32,3)
 
 [dataset]
-x = Y:/PythonProjekty/Datasets/MNIST_digits/x.csv
-y = Y:/PythonProjekty/Datasets/MNIST_digits/y.csv
+x = Y:/PythonProjekty/Datasets/cifar10/x.csv
+y = Y:/PythonProjekty/Datasets/cifar10/y.csv
+
+x_shape = (60000, 32, 32, 3)
 
 train_part = 0.6
 validation_part = 0.2
@@ -20,10 +23,11 @@ x_do_scaling = True
 
 [hyperpars]
 layer_range = False
-number_of_hidden_layers = 2
-number_of_neurons = 16, 32
-activation_funcs = relu, sigmoid
-
+number_of_conv_layers = 2
+number_of_filters = 32, 64
+kernel_size = (3, 3)
+pooling_size = (2, 2)
+activation_funcs = relu
 
 [visualize_results]
 print_top = 10
