--- a/conf.ini
+++ b/conf.ini
@@ -6,21 +6,24 @@ batch_size = 128
 output_activation = softmax
 optimizer = adam
 multithreading = True
+input_shape = (784)
 
 [dataset]
 x = Y:/PythonProjekty/Datasets/MNIST_digits/x.csv
 y = Y:/PythonProjekty/Datasets/MNIST_digits/y.csv
 
-train_part = 0.6
-validation_part = 0.2
+x_shape = (70000, 784)
+
+train_part = 0.8
+validation_part = 0.0
 test_part = 0.2
 
 y_do_one_hot = True
 x_do_scaling = True
 
 [hyperpars]
-layer_range = False
-number_of_hidden_layers = 2
+number_of_hidden_layers = 2, 3
+layer_range = True
 number_of_neurons = 16, 32
 activation_funcs = relu, sigmoid
 
