ani nevim co jsem udelal

--- a/cnn_conf.ini
+++ b/cnn_conf.ini
@@ -22,12 +22,12 @@ y_do_one_hot = True
 x_do_scaling = True
 
 [hyperpars]
+number_of_conv_layers = 3
 layer_range = False
-number_of_conv_layers = 2
-number_of_filters = 32, 64
+number_of_filters = 32
 kernel_size = (3, 3)
 pooling_size = (2, 2)
-activation_funcs = relu
+activation_funcs = relu, sigmoid
 
 [visualize_results]
 print_top = 10
