--- a/conf.ini
+++ b/conf.ini
@@ -1,18 +1,18 @@
 [learning_settings]
 loss_function = categorical_crossentropy
 epochs = 10
-output_neurons = 10
-batch_size = 128
+output_neurons = 2
+batch_size = 32
 output_activation = softmax
 optimizer = adam
 multithreading = True
-input_shape = (784)
+input_shape = (23)
 
 [dataset]
-x = Y:/PythonProjekty/Datasets/MNIST_digits/x.csv
-y = Y:/PythonProjekty/Datasets/MNIST_digits/y.csv
+x = Y:/PythonProjekty/Datasets/titanic/x.csv
+y = Y:/PythonProjekty/Datasets/titanic/y.csv
 
-x_shape = (70000, 784)
+x_shape = (891, 23)
 
 train_part = 0.8
 validation_part = 0.0
@@ -22,9 +22,9 @@ y_do_one_hot = True
 x_do_scaling = True
 
 [hyperpars]
-number_of_hidden_layers = 2, 3
+number_of_hidden_layers = 2
 layer_range = True
-number_of_neurons = 16, 32
+number_of_neurons = 32
 activation_funcs = relu, sigmoid
 
 [visualize_results]
