--- a/conf.ini
+++ b/conf.ini
@@ -22,7 +22,7 @@ y_do_one_hot = True
 x_do_scaling = True
 
 [hyperpars]
-number_of_hidden_layers = 2
+number_of_hidden_layers = 4, 5, 6
 layer_range = True
 number_of_neurons = 32
 activation_funcs = relu, sigmoid
