--- a/cnn_conf.ini
+++ b/cnn_conf.ini
@@ -35,6 +35,7 @@ generate_confusion_matrix = True
 generate_classification_report = True
 
 [sort_by]
+metrics_type = weighted
 accuracy = True
 precision = False
 recall = False
