--- a/conf.ini
+++ b/conf.ini
@@ -1,18 +1,18 @@
 [learning_settings]
 loss_function = categorical_crossentropy
 epochs = 10
-output_neurons = 2
-batch_size = 32
+output_neurons = 3
+batch_size = 1
 output_activation = softmax
 optimizer = adam
-multithreading = True
-input_shape = (23)
+multithreading = False
+input_shape = (4)
 
 [dataset]
-x = Y:/PythonProjekty/Datasets/titanic/x.csv
-y = Y:/PythonProjekty/Datasets/titanic/y.csv
+x = Y:/PythonProjekty/Datasets/iris/x.csv
+y = Y:/PythonProjekty/Datasets/iris/y.csv
 
-x_shape = (891, 23)
+x_shape = (150, 4)
 
 train_part = 0.8
 validation_part = 0.0
@@ -22,8 +22,8 @@ y_do_one_hot = True
 x_do_scaling = True
 
 [hyperpars]
-number_of_hidden_layers = 4, 5, 6
-layer_range = True
+number_of_hidden_layers = 2
+layer_range = False
 number_of_neurons = 32
 activation_funcs = relu, sigmoid
 
@@ -33,6 +33,7 @@ generate_confusion_matrix = True
 generate_classification_report = True
 
 [sort_by]
+metrics_type = weighted
 accuracy = True
 precision = False
 recall = False
