added nektere datasety

--- a/conf.ini
+++ b/conf.ini
@@ -1,34 +1,34 @@
 [learning_settings]
 loss_function = categorical_crossentropy
 epochs = 10
-output_neurons = 3
-batch_size = 1
+output_neurons = 2
+batch_size = 8
 output_activation = softmax
 optimizer = adam
-multithreading = False
-input_shape = (4)
+multithreading = True
+input_shape = (23)
 
 [dataset]
-x = Y:/PythonProjekty/Datasets/iris/x.csv
-y = Y:/PythonProjekty/Datasets/iris/y.csv
+x = Y:/PythonProjekty/Datasets/titanic/x.csv
+y = Y:/PythonProjekty/Datasets/titanic/y.csv
 
-x_shape = (150, 4)
+x_shape = (891, 23)
 
-train_part = 0.8
+train_part = 0.6
 validation_part = 0.0
-test_part = 0.2
+test_part = 0.4
 
 y_do_one_hot = True
 x_do_scaling = True
 
 [hyperpars]
-number_of_hidden_layers = 2
+number_of_hidden_layers = 2, 3, 4
 layer_range = False
-number_of_neurons = 32
+number_of_neurons = 16, 32, 64
 activation_funcs = relu, sigmoid
 
 [visualize_results]
-print_top = 10
+print_top = 15
 generate_confusion_matrix = True
 generate_classification_report = True
 
