n of threads added

--- a/cnn_conf.ini
+++ b/cnn_conf.ini
@@ -1,22 +1,23 @@
 [learning_settings]
 loss_function = categorical_crossentropy
-epochs = 4
+epochs = 5
 output_neurons = 10
 batch_size = 128
 output_activation = softmax
 optimizer = adam
-multithreading = False
+multithreading = True
+number_of_threads = 4
 input_shape = (28,28,1)
 
 [dataset]
-x = Y:/PythonProjekty/Datasets/MNIST_digits/x.csv
-y = Y:/PythonProjekty/Datasets/MNIST_digits/y.csv
+x = Y:/PythonProjekty/Datasets/MNIST_fashion/x.csv
+y = Y:/PythonProjekty/Datasets/MNIST_fashion/y.csv
 
-x_shape = (70000, 28, 28, 1)
+x_shape = (35000, 28, 28, 1)
 
 train_part = 0.6
-validation_part = 0.2
-test_part = 0.2
+validation_part = 0.0
+test_part = 0.4
 
 y_do_one_hot = True
 x_do_scaling = True
@@ -24,13 +25,13 @@ x_do_scaling = True
 [hyperpars]
 number_of_conv_layers = 3
 layer_range = False
-number_of_filters = 32
-kernel_size = (3, 3)
+number_of_filters = 64, 128
+kernel_size = (2, 2), (3, 3)
 pooling_size = (2, 2)
-activation_funcs = relu, sigmoid
+activation_funcs = relu
 
 [visualize_results]
-print_top = 10
+print_top = 30
 generate_confusion_matrix = True
 generate_classification_report = True
 
