--- a/conf.ini
+++ b/conf.ini
@@ -6,6 +6,7 @@ batch_size = 8
 output_activation = softmax
 optimizer = adam
 multithreading = True
+number_of_threads = 4
 input_shape = (23)
 
 [dataset]
@@ -22,9 +23,9 @@ y_do_one_hot = True
 x_do_scaling = True
 
 [hyperpars]
-number_of_hidden_layers = 2, 3, 4
+number_of_hidden_layers = 2
 layer_range = False
-number_of_neurons = 16, 32, 64
+number_of_neurons = 16, 32
 activation_funcs = relu, sigmoid
 
 [visualize_results]
