--- a/conf.ini
+++ b/conf.ini
@@ -1,35 +1,35 @@
 [learning_settings]
 loss_function = categorical_crossentropy
 epochs = 10
-output_neurons = 2
+output_neurons = 9
 batch_size = 8
 output_activation = softmax
 optimizer = adam
 multithreading = True
 number_of_threads = 4
-input_shape = (23)
+input_shape = (97)
 
 [dataset]
-x = Y:/PythonProjekty/Datasets/titanic/x.csv
-y = Y:/PythonProjekty/Datasets/titanic/y.csv
+x = Y:/PythonProjekty/Datasets/DNP3_p/x.csv
+y = Y:/PythonProjekty/Datasets/DNP3_p/y.csv
 
-x_shape = (891, 23)
+x_shape = (5994, 97)
 
 train_part = 0.6
 validation_part = 0.0
 test_part = 0.4
 
-y_do_one_hot = True
+y_do_one_hot = False
 x_do_scaling = True
 
 [hyperpars]
-number_of_hidden_layers = 2
+number_of_hidden_layers = 2, 3, 4
 layer_range = False
-number_of_neurons = 16, 32
+number_of_neurons = 16, 32, 64
 activation_funcs = relu, sigmoid
 
 [visualize_results]
-print_top = 15
+print_top = 50
 generate_confusion_matrix = True
 generate_classification_report = True
 
